Too big a commit. Solved several problems withing scoring and clock time retrieval. Added supporting copy to the win screen. Added a play again button to win screen. This button is currently not working due to being behind the game board. This is a bug that will have to be addressed. Added a generic star png. Will need to drop the custom stars from the gameItem objects

--- a/css/app.css
+++ b/css/app.css
@@ -37,6 +37,10 @@ body {
    background: #ffffff;
    } */
 
+#play-again {
+  margin-top: 20px;
+}
+
 #panel {
   template-area: panel;
   font-size: 20px;
@@ -86,6 +90,27 @@ body {
   -o-transition: opacity 1s ease-in-out;
   transition: opacity 1s ease-in-out;
 }
+/* #stars {
+  opacity: 0.4;
+  transition: opacity: 1.5s;
+  -webkit-transition: opacity 1.5s ease-in-out;
+  -moz-transition: opacity 1.5s ease-in-out;
+  -ms-transition: opacity 1.5s ease-in-out;
+  -o-transition: opacity 1.5s ease-in-out;
+  transition: opacity 1.5s ease-in-out;
+} */
+
+.star {
+  width: 50px;
+  height: 50px;
+  opacity: 0.4;
+  transition: opacity: 1.5s;
+  -webkit-transition: opacity 1.5s ease-in-out;
+  -moz-transition: opacity 1.5s ease-in-out;
+  -ms-transition: opacity 1.5s ease-in-out;
+  -o-transition: opacity 1.5s ease-in-out;
+  transition: opacity 1.5s ease-in-out;
+}
 
 #game-board {
   background-color: rgba(0, 0, 0, 0.8);
@@ -97,6 +122,7 @@ body {
   -ms-transition: opacity 0.5s ease-in-out;
   -o-transition: opacity 0.5s ease-in-out;
   transition: opacity 0.5s ease-in-out;
+  /* opacity: 0; */
 }
 
 .card-container {
